objects/Apttus_Approval__Global_Discount_Policy__c.object
<CustomObject>
    <description>Designates global discount policies for six levels of approvals</description>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Authorized_Discount_Percent__c</fullName>
        <label>Authorized Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Global Discount Policy</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Approval_Level__c</columns>
        <columns>Apttus_Approval__Description__c</columns>
        <columns>Apttus_Approval__Authorized_Discount_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Discount Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>